--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://neondb_owner:npg_cSk2di0tngUP@ep-tiny-mountain-a1xer1px-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'"
+DATABASE_URL='postgresql://neondb_owner:npg_wAFu3I7MgxXp@ep-silent-pond-a1kve4v8-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
